--- a/03 Arte Moderno/style.css
+++ b/03 Arte Moderno/style.css
@@ -9,6 +9,8 @@
     width: 800px;
     height: 800px;
     margin: auto;
+    border: solid 20px gray;
+
 }
 .left{
 flex:1;
@@ -46,4 +48,26 @@ flex: 3;
     height: 570.5px;
 }
 
-.owwhiten
+.owhite{
+    background-color: white;
+    width: 500px;
+    height: 194px;
+    margin: 30px 0px 0px 0px; 
+}
+
+
+.miniblanco{
+    background-color: rgb(255, 251, 0);
+    width: 15%;
+    height: 79px;
+    margin: 30px 0px 0px 525px;
+
+}
+
+.miniamarillo{
+    background-color: rgb(255, 255, 255);
+    width: 15%;
+    height: 85px;
+    margin: 35px 0px 0px 525px; 
+    
+}
