--- a/07_img/style.css
+++ b/07_img/style.css
@@ -1,39 +1,60 @@
 *{
     padding: 0px;
     margin: 0px;
-    /* outline: solid 1px red; */
+    /* outline: solid 1px red;  */
 }
 
 .container{
-    width: 700px;
-    height: 700px;
+    width: 940px;
+    height: 900px;
     margin: 0px auto;
     padding: 30px;
     background-color: rgb(234,235,229);
     margin-top: 30px;
 }
 
+.mikoyan, .sukhoi, .lockheed_martin{
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    margin-bottom: 20px;
+
+}
+
 .mikoyan{
-    width: 700px;
+    width: 900px;
     height: 200px;
     margin-bottom: 20px;
     background-color: rgb(89,197,251);
 }
 
 .sukhoi{
-    width: 700px;
+    width: 900px;
     height: 200px;
     margin-bottom: 20px;
     background-color: rgb(202,161,174);
 }
 
 .lockheed_martin{
-    width: 700px;
+    width: 900px;
     height: 200px;
-    background-color: white;
+    background-color: rgb(246,246,255);
 }
 
-p{
+h1{
     text-align: center;
     font-size: 50px;
+}
+
+img{
+    width: 300px;
+}
+
+P{
+    text-align: center;
+    font-size: 20px;
+}
+
+span{
+    text-decoration: underline;
 }
