--- a/09_barra-navegacion/style.css
+++ b/09_barra-navegacion/style.css
@@ -6,18 +6,22 @@
 
 a{
     margin: 10px;
-    text-decoration: none; /*quita decoracion de etiqueta anchor*/
+    text-decoration: none;
     color: white;
+    
 }
 
 .nav{
     background-color: rgb(51,51,51);
     display: flex;
-    padding: 10px;
+    padding: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
 }
 
 h1{
     color: white;
+    font-size: 35px;
 }
 
 .nav-links{
@@ -25,11 +29,15 @@ h1{
     list-style: none;
     padding: 0px;
     margin: 0px;
-}
-.nav-links{
-    margin-left: 270px;
+    margin-left: auto;
+    align-items: center;
 }
 
 .chao{
-    
+    box-shadow: 3px 3px 3px black;
+    border-color: black;
+    background-color:rgb(23,162,184);
+    color: white;
+    border: 3px;
+    padding: 5px;
 }
