--- a/10.1_perfil_usuario/style.css
+++ b/10.1_perfil_usuario/style.css
@@ -1,17 +1,38 @@
 * {
     margin: 0px;
     padding: 0px;
-    outline: solid 1px red;
+    /* outline: solid 1px red; */
 }
 
-.cyan {
-    background-color: rgb(66, 163, 185);
-}
 
 .container {
-    margin-top: 20px;
+    margin: 0px auto;
+    margin-top: 50px;
+    width: 800px;
+    border-radius: 3%;
+    box-shadow: 0px 0px 5px 1px;
+}
+.cyan {
+    background-color: rgb(66, 163, 185);
+    display: flex;
+    height: 120px;
 }
 
-.imagen {
-    
+.imagen img {
+    height: 180px;
+    margin-top: 10px;
+    padding: 15px;
 }
+.row{
+    display: flex; 
+    height: 20px;
+}
+.nombre{
+    margin-top: 150px;
+    padding: 10px;
+}
+
+h2{
+margin-left: 5px;
+}
+
