--- a/10.1_perfil_usuario/style.css
+++ b/10.1_perfil_usuario/style.css
@@ -9,7 +9,8 @@
     margin: 0px auto;
     margin-top: 50px;
     width: 800px;
-    border-radius: 3%;
+    height: 390px;
+    border-radius: 1%;
     box-shadow: 0px 0px 5px 1px;
 }
 .cyan {
@@ -18,6 +19,10 @@
     height: 120px;
 }
 
+.miniContainer{
+    margin: 10px;
+    
+}
 .imagen img {
     height: 180px;
     margin-top: 10px;
@@ -28,11 +33,18 @@
     height: 20px;
 }
 .nombre{
-    margin-top: 150px;
-    padding: 10px;
+    margin-top: 100px;
+    padding: 5px;
 }
 
-h2{
-margin-left: 5px;
+p{
+    font-size:  20px;
+    margin: 10px;
 }
 
+.confguracion{
+    height: 25px;
+    display: flex;
+    text-decoration: underline;
+    color: rgb(45,121,228);
+}
