--- a/11.2_sigamos_con_flex/style.css
+++ b/11.2_sigamos_con_flex/style.css
@@ -1,34 +1,59 @@
 *{
     margin: 0px;
     padding: 0px;
-    outline: solid 1px red;
+    /* outline: solid 1px red; */
+    color: white;
     text-align: center;
 }
-
-
+body{
+    background-color: rgb(253,246,236);
+}
 .encabezado{
     padding: 30px;
     background-color: rgb(52,73,94);
-    color: white;
+    display: flex;
+    flex-flow: column wrap;
+    gap: 15px;
 }
-.encabezado h1{ 
-    margin-bottom: 25px;
+.container{
+    display: flex;
+    flex-flow: column wrap;
+    max-width: 800px;
+    margin: 40px auto;
+    padding: 40px;
+    background-color:  white;
+    border-radius: 25px;
+    box-shadow: 0px 0px 1px 0px black;
 }
-
+.cuadroP, .cuadro{
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-flow: column wrap;
+     gap: 10px; /*funcuona solo con display flex  */
+}
 .cuadroP{
     background-color: rgb(230,126,34);
     padding: 30px;
 }
 
-.cuadroS, .cuadroT, .cuadroC{
+.cuadro{
     background-color: #d35400;
-    margin-bottom: 25px;
-    padding: 25px;
+    padding: 30px;
+    flex: 2;
 }
 
-.main{
-    height: 500px;
-    width: 1000px;
+.main-2{
     display: flex;
-    text-align: center;
+    flex-flow: row wrap;
+    flex: 2;
+    justify-content: space-between;
+    gap: 10px;
+}
+.main{
+    display: flex;
+    flex-flow: column wrap;
+    gap: 10px;
 }
