--- a/prueba_01/style.css
+++ b/prueba_01/style.css
@@ -11,7 +11,7 @@
     color: rgb(51, 46, 84);
 }
 
-.main {
+.main { /*cuadro que principal*/
     max-width: 1200px;
     border-radius: 10px;
     box-shadow: 0px 2px 10px 1px;
@@ -26,7 +26,7 @@
     margin-top: 15px;
 }
 
-.imagenes {
+.imagenes { 
     display: flex;
     align-items: center;
     margin-top: 40px;
@@ -35,7 +35,7 @@
 
 }
 
-.derecho {
+.derecho { /* parte derecha que se enfoca en la ubicacion del titulo  */
     margin-top: 20px;
     display: flex;
     align-items: center;
@@ -46,7 +46,7 @@
     margin-left: auto;
 }
 
-p {
+p { /*se enfoca en los pequeños textos de la izquierda */
     margin-top: 10px;
     display: flex;
     flex-flow: column wrap;
