--- a/13_4_interfaz de solicitudes y conexiones/style.css
+++ b/13_4_interfaz de solicitudes y conexiones/style.css
@@ -1,13 +1,13 @@
 *{
     margin: 0px;
     padding: 0px;
-    /* outline: solid 1px greenyellow; */
+    outline: solid 1px rgb(0, 0, 0);
 }
 
 .container{
     display: flex;
     margin-top: 100px;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     margin: auto;
 }
 
@@ -23,11 +23,17 @@
 .superior-top{
     display: flex;
     flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
 
 .goals{
     width: 25px;
     height: 25px;
+    flex-flow: column;
+    margin: 10px;
+    gap: 10px;
 }
 
 .mause{
@@ -39,12 +45,14 @@
 .check{
     display: flex;
     flex-flow: row wrap;
-    gap: 20px;
+    gap: 10px;
+    justify-content: ;
 }
 
 .fusion{
     display: flex;
     flex-flow: row wrap;
+    margin: 10px auto;
 }
 
 button{
@@ -52,7 +60,6 @@ button{
     width: 100px;
     height: 30px;
     border-radius: 10%;
-    color: #31a7a9
-    
+    color: #31a7a9;
 }
 
