--- a/CSS/13_4_interfaz de solicitudes y conexiones/style.css
+++ b/CSS/13_4_interfaz de solicitudes y conexiones/style.css
@@ -1,67 +1,79 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
-    /* outline: solid 1px rgb(0, 0, 0); */
+    /* outline: solid 1px rgb(94, 255, 0); */
 }
 
-.container{
+h3 {
     display: flex;
+    align-items: center;
+}
+
+.container {
     margin-top: 100px;
     flex-flow: column wrap;
     margin: auto;
 }
 
-.mains{
+.main1 {
     margin: 0px auto;
     margin-top: 50px;
-    width: 800px;
-    border-radius: 1%;
+    border-radius: 10%;
     box-shadow: 0px 0px 10px 1px;
-    max-width: 500px;
+    max-width: 450px;
+    padding: 20px;
+    height: 100px;
 }
 
-.superior-top{
+.main2 {
+    margin: 0px auto;
+    margin-top: 50px;
+    border-radius: 10%;
+    box-shadow: 0px 0px 10px 1px;
+    max-width: 450px;
+    padding: 20px;
+    height: 150px;
+}
+
+.superior-top {
     display: flex;
-    flex-flow: row wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 20px;
 }
 
-.goals{
+.goals {
     width: 25px;
     height: 25px;
     gap: 10px;
-    
+
 }
 
-.mause{
+.mause {
     width: 20px;
     height: 20px;
     display: flex;
 }
 
-.check{
+.check {
     display: flex;
-    flex-flow: row wrap;
-    gap: 10px;
-    align-items: center;
 }
 
-.fusion{
+.fusion {
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: column;
 }
 
-button{
-    border: 2px solid #31a7a9; 
+button {
+    border: 2px solid #31a7a9;
     width: 100px;
     height: 30px;
     border-radius: 10%;
     color: #31a7a9;
 }
 
-.users{
+.row {
     display: flex;
-    flex-flow: column wrap;
+    justify-content: space-between;
+    align-items: center;
 }
