--- a/CSS/14_4_practica_lo_aprendido/style.css
+++ b/CSS/14_4_practica_lo_aprendido/style.css
@@ -1,5 +1,175 @@
-*{
+* {
     padding: 0px;
     margin: 0px;
-    outline: solid 1px red;
+    /* outline: solid 1px red; */
+}
+
+a {
+    margin: 10px;
+    text-decoration: none;
+    color: white;
+
+}
+
+.nav {
+    background-color: rgb(51, 51, 51);
+    display: flex;
+    padding: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+}
+
+h1 {
+    color: white;
+    font-size: 35px;
+}
+
+.nav-links {
+    display: flex;
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+    margin-left: auto;
+    align-items: center;
+}
+
+.chao {
+    box-shadow: 3px 3px 3px black;
+    border-color: black;
+    background-color: rgb(23, 162, 184);
+    color: white;
+    border: 3px;
+    padding: 5px;
+}
+
+.main {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    margin-left: 100px;
+    max-width: 400px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px 1px;
+    margin-top: 100px;
+}
+
+.gatoloko {
+    margin-top: -80px;
+    display: flex;
+    justify-content: center;
+    height: 150px;
+    border-radius: 100%;
+    border: solid 8px rgb(255, 255, 255);
+}
+
+.info {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
+h1 {
+    margin: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+h2 {
+    margin: 15px;
+
+}
+
+.enlaces {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 20px;
+}
+
+button {
+    width: 150px;
+    height: 40px;
+    margin-top: 20px;
+    font-size: 20px;
+    background-color: rgb(43, 120, 228);
+    color: white;
+    border-radius: 10px;
+    border: solid 1px blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*  */
+
+h3 {
+    display: flex;
+    align-items: center;
+}
+
+.container {
+    margin-top: 100px;
+    flex-flow: column wrap;
+    margin: auto;
+}
+
+.main1 {
+    margin: 0px auto;
+    margin-top: 50px;
+    border-radius: 10%;
+    box-shadow: 0px 0px 10px 1px;
+    max-width: 450px;
+    padding: 20px;
+    height: 100px;
+}
+
+.main2 {
+    margin: 0px auto;
+    margin-top: 50px;
+    border-radius: 10%;
+    box-shadow: 0px 0px 10px 1px;
+    max-width: 450px;
+    padding: 20px;
+    height: 150px;
+}
+
+.superior-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.goals {
+    width: 25px;
+    height: 25px;
+    gap: 10px;
+
+}
+
+.mause {
+    width: 20px;
+    height: 20px;
+    display: flex;
+}
+
+.check {
+    display: flex;
+}
+
+.fusion {
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    border: 2px solid #31a7a9;
+    width: 100px;
+    height: 30px;
+    border-radius: 10%;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
