--- a/CSS/15_5_Perfil basado en tarea anterior/estilo.css
+++ b/CSS/15_5_Perfil basado en tarea anterior/estilo.css
@@ -1,10 +1,30 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     outline: solid 1px;
 }
 
-.container{
+.container {
     display: flex;
     flex-flow: column;
+}
+
+.main {
+    margin: auto;
+    height: 600px;
+    width: 600px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px 1px;
+}
+
+.foto{
+    height: 250px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 10px 1px;
+    margin: 20px;
+}
+
+button{
+    margin: 10px;
 }
