--- a/js/05 condiciones if else/static/css/style.css
+++ b/js/05 condiciones if else/static/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: rgb(138, 61, 61);
+    background-color: black;
 }
 
 header {
@@ -90,4 +90,20 @@ header {
     justify-content: center;
     color: white;
     font-size: 20px;
+}
+
+.resultado p {
+    text-shadow: 0px 0px 10px cyan,
+        0px 0px 20px cyan,
+        0px 0px 40px cyan,
+        0px 0px 80px cyan;
+}
+
+.containerCajas {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+    margin: 80px auto;
+    gap: 40px;
+    text-align: center;
 }
