--- a/js/06 bucles for while/static/css/style.css
+++ b/js/06 bucles for while/static/css/style.css
@@ -90,6 +90,7 @@ header {
     justify-content: center;
     color: white;
     font-size: 20px;
+    flex-direction: column;
 }
 
 .resultado p {
@@ -106,4 +107,9 @@ header {
     margin: 80px auto;
     gap: 40px;
     text-align: center;
+}
+.row{
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
